# calcard

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  PORTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
conformance/: PROVENANCE.md
conformance/fixtures/icaljs/recur/: cases.json
conformance/fixtures/libical/samples/: test.vcf  user-cal.vcf
conformance/fixtures/pyvobject/: radicale_0731.ics  radicale_0816.ics  radicale_0827.ics  radicale_1238_3.ics  radicale_1587.ics
conformance/fixtures/sabre-vobject/extracted/: manifest.json
conformance/fixtures/sabre-vobject/extracted/AttachIssueTest/: 001.ics
conformance/fixtures/sabre-vobject/extracted/BirthdayCalendarGeneratorTest/: 002.ics  004.vcf  006.vcf  008.ics  014.vcf  015.ics  016.vcf  018.vcf  020.vcf  023.ics  024.vcf  026.ics  027.ics  029.vcf
conformance/fixtures/sabre-vobject/extracted/CliTest/: 002.vcf  004.vcf  005.vcf  008.vcf  009.ics  010.ics  011.vcf  012.vcf  013.ics
conformance/fixtures/sabre-vobject/extracted/Component/AvailableTest/: 001.ics  002.ics  003.ics
conformance/fixtures/sabre-vobject/extracted/Component/VAlarmTest/: 001.ics
conformance/fixtures/sabre-vobject/extracted/Component/VAvailabilityTest/: 002.ics  003.ics  004.ics  006.ics  007.ics  008.ics  009.ics  010.ics  011.ics  012.ics  013.ics  014.ics  015.ics  016.ics  017.ics  018.ics
conformance/fixtures/sabre-vobject/extracted/Component/VCalendarTest/: 001.ics  002.ics  003.ics  004.ics  005.ics  006.ics  007.ics  008.ics  009.ics  010.ics  011.ics  012.ics  013.ics  014.ics  016.ics  017.ics  018.ics  019.ics  020.ics  021.ics  022.ics  023.ics  024.ics  025.ics  026.ics  027.ics  029.ics  030.ics  031.ics  032.ics  033.ics  034.ics  035.ics
conformance/fixtures/sabre-vobject/extracted/Component/VCardTest/: 001.vcf  002.vcf  003.vcf  004.vcf  005.vcf  009.vcf  011.vcf
conformance/fixtures/sabre-vobject/extracted/Component/VFreeBusyTest/: 001.ics  002.ics
conformance/fixtures/sabre-vobject/extracted/Component/VJournalTest/: 001.ics  002.ics
conformance/fixtures/sabre-vobject/extracted/Component/VTimeZoneTest/: 002.ics
conformance/fixtures/sabre-vobject/extracted/Component/VTodoTest/: 001.ics  002.ics  003.ics  004.ics  005.ics  006.ics
conformance/fixtures/sabre-vobject/extracted/EmClientTest/: 001.ics
conformance/fixtures/sabre-vobject/extracted/EmptyParameterTest/: 001.vcf
conformance/fixtures/sabre-vobject/extracted/EmptyValueIssueTest/: 001.ics
conformance/fixtures/sabre-vobject/extracted/FreeBusyGeneratorTest/: 001.ics  003.ics  004.ics  005.ics  006.ics  007.ics  008.ics  009.ics  010.ics  011.ics  012.ics  013.ics  014.ics  015.ics  017.ics  018.ics  020.ics  022.ics  023.ics  024.ics  026.ics  028.ics  030.ics
conformance/fixtures/sabre-vobject/extracted/GoogleColonEscapingTest/: 001.vcf
conformance/fixtures/sabre-vobject/extracted/ICalendar/AttachParseTest/: 001.ics
conformance/fixtures/sabre-vobject/extracted/ITip/BrokerAttendeeReplyTest/: 001.ics  002.ics  003.ics  004.ics  005.ics  006.ics  007.ics  008.ics  010.ics  011.ics  012.ics  013.ics  014.ics  015.ics  017.ics  018.ics  019.ics  020.ics  022.ics  023.ics  024.ics  025.ics  026.ics  028.ics  029.ics  030.ics  031.ics  032.ics  033.ics  034.ics  035.ics  036.ics  (+2 more)
conformance/fixtures/sabre-vobject/extracted/Issue36WorkAroundTest/: 001.ics
conformance/fixtures/sabre-vobject/extracted/Issue467Test/: 001.ics
conformance/fixtures/sabre-vobject/extracted/Issue96Test/: 001.vcf
conformance/fixtures/sabre-vobject/extracted/IssueUndefinedIndexTest/: 001.vcf
conformance/fixtures/sabre-vobject/extracted/LineFoldingIssueTest/: 001.ics
conformance/fixtures/sabre-vobject/extracted/ReaderTest/: 001.ics  004.ics  005.ics  006.ics  007.ics  008.ics  009.ics  010.ics  011.ics  012.ics  013.ics  014.ics  015.ics  016.ics  017.ics  018.ics  019.ics  020.ics  021.ics
conformance/fixtures/sabre-vobject/extracted/TimeZoneUtilTest/: 001.ics  002.ics  003.ics  004.ics  005.ics  006.ics
conformance/fixtures/sabre-vobject/extracted/VCard21Test/: 001.vcf  002.vcf  003.vcf
conformance/fixtures/sabre-vobject/extracted/VCardConverterTest/: 001.vcf  002.vcf  003.vcf  005.vcf  006.vcf  007.vcf  009.vcf  010.vcf  011.vcf  012.vcf  013.vcf  014.vcf  015.vcf  016.vcf  017.vcf  018.vcf  019.vcf  022.vcf  023.vcf  024.vcf  025.vcf  026.vcf  027.vcf  028.vcf
conformance/tools/: extract_icaljs_recur.py  extract_sabre.py  vendor.py
crates/vobject-core/: Cargo.toml
crates/vobject-core/src/: contentline.rs  error.rs  escape.rs  fold.rs  jcal.rs  lib.rs  lines.rs  model.rs  parse.rs  rrule.rs  rscale.rs  write.rs  xcal.rs
crates/vobject-core/src/value/: base64.rs  datetime.rs  duration.rs  mod.rs  recur.rs
crates/vobject-core/tests/: compat_ical_crate.rs  compat_icalendar_crate.rs  compat_rrule_crate.rs  conformance.rs  hardening.rs  jcal_conformance.rs  jcal_roundtrip.rs  properties.rs  rrule_conformance.rs  xcal_conformance.rs
crates/vobject-py/: Cargo.toml
crates/vobject-py/src/: lib.rs
python/calcard/: __init__.py  timezones.py  typed.py  values.py
python/calcard/compat/: __init__.py
python/calcard/compat/icalendar/: VENDORED-NOTICE.txt  __init__.py
python/calcard/compat/icalendar/tests/: conftest.py  test_with_doctest.py
python/calcard/compat/pyvobject/: __init__.py  base.py  change_tz.py  icalendar.py  ics_diff.py
python/icalendar/: VENDORED-NOTICE.txt  _version.py
python/icalendar/tests/: test_funding_json.py  test_with_doctest.py
python/vobject/: __init__.py  base.py  behavior.py  hcalendar.py  icalendar.py  ics_diff.py  typed.py  values.py  vcard.py
src/icalendar/: tests
tests/: test_api.py  test_compat_dateutil_rrule.py  test_compat_fixes.py  test_compat_icalendar.py  test_compat_pyvobject.py  test_conformance.py  test_dst_expansion.py  test_hardening.py  test_hcalendar.py  test_ics_diff.py  test_jcal.py  test_ported_pyvobject.py  test_pretalx_workflows.py  test_properties.py  test_timezones.py  test_typed.py  test_values.py  test_xcal.py
tests_upstream/pyvobject/: conftest.py  test_behaviors.py  test_cli.py
(+160 files in other folders)
