[build-system]
requires = ["maturin>=1.11,<2"]
build-backend = "maturin"

[project]
name = "vobject-rs"
version = "0.1.0"
description = "Robust iCalendar and vCard parsing and serialization, backed by a Rust core"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
compat = [
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
]

[project.scripts]
ics_diff = "vobject.ics_diff:main"
change_tz = "vobject.change_tz:main"

[tool.maturin]
python-source = "python"
module-name = "vobject._core"
python-packages = ["vobject", "icalendar"]
manifest-path = "crates/vobject-py/Cargo.toml"

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "maturin>=1.11",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "tzdata>=2026.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
