[build-system]
requires = ["maturin>=1.11,<2"]
build-backend = "maturin"

[project]
name = "calcard"
version = "0.1.0"
description = "Robust iCalendar and vCard parsing and serialization, backed by a Rust core"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "David R. MacIver", email = "david@drmaciver.com" }]
keywords = ["icalendar", "vcard", "ical", "rfc5545", "rfc6350", "jcal", "xcal", "rrule"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Repository = "https://github.com/DRMacIver/calcard"

[tool.maturin]
python-source = "python"
module-name = "calcard._core"
python-packages = ["calcard"]
manifest-path = "crates/vobject-py/Cargo.toml"

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "maturin>=1.11",
    "pytz>=2025.2",
    "tzdata>=2026.3",
    "vobject>=0.9.9",
    "icalendar>=7.2.2",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
