[package]
name = "vobject-core"
description = "Robust parser and serializer for the vobject formats (iCalendar RFC 5545, vCard RFC 6350/2426/2.1)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
icu_calendar = "2.2.1"
quick-xml = "0.41.0"
serde_json = { version = "1.0.151", features = ["preserve_order"] }

[dev-dependencies]
chrono = "0.4.45"
hegeltest = "0.28.2"
ical = "0.11.0"
icalendar = "0.17.12"
rrule = "0.14.0"
