[package]
name = "vobject-py"
description = "Python bindings for vobject-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
vobject-core = { path = "../vobject-core" }
